svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-practice-svc
  # namespace: kube-system
spec:
  type: NodePort
  selector:
    app: ingress-practice
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 3000
      targetPort: 3000
      nodePort: 30007
