deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elliott-ingress-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: elliott-ingress
  labels:
    app: elliott-ingress
  name: elliott-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elliott-ingress
  template:
    metadata:
      labels:
        app: elliott-ingress
    spec:
      containers:
      - image: si3mshady/time:v1.2
        name: time
        ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: elliott-ingress-svc
  namespace: elliott-ingress
spec:
  type: NodePort
  selector:
    app: elliott-ingress
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30007
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
  name: elliott-ingress
  namespace: elliott-ingress
spec:
  rules:
    - host: "*.amazonaws.com"
      http:
       paths:
        - path: "/"
          pathType: Prefix
          backend:
            service: 
              name: elliott-ingress-svc
              port:
                number: 3000

    - host: "*.elliottlamararnold.com"
      http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service: 
              name: elliott-ingress-svc
              port:
                number: 3000
