ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: practice-ingress
  # namespace: kube-system
spec:
  rules:
    - host: kubernetes.docker.internal
      http:
       paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: ingress-practice-svc
              port:
                number: 3000
